@@ -171,6 +171,23 @@ ProxyVia On
     </example>
     </section> <!-- /examples -->
 
+    <section id="handler"><title>Access via Handler</title>
+
+    <p>You can also force a request to be handled as a reverse-proxy
+      request, by creating a suitable Handler pass-thru. For example,
+      the below will pass all PHP scripts to the specified
+      reverse-proxy FCGI server:
+    </p>
+
+    <example><title>Reverse Proxy PHP scripts</title>
+    <highlight language="config">
+&lt;FilesMatch \.php$&gt;
+    SetHandler  "proxy:unix:/path/to/app.sock|fcgi://localhost/"
+&lt;/FilesMatch&lgt;
+    </highlight>
+    </example>
+    </section> <!-- /handler -->
+
 
     <section id="workers"><title>Workers</title>
       <p>The proxy manages the configuration of origin servers and their
